Started part 2 and logistic regression

--- a/assignment4/assignment4.ipynb
+++ b/assignment4/assignment4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO++3OQFST6P52YCFfBgqX2",
+      "authorship_tag": "ABX9TyMgNcSyCPEPtrrFe1WHsoui",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3533,6 +3533,57 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Shuffle the test and training data."
+      ],
+      "metadata": {
+        "id": "c1XvT5EB8HTr"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.utils import shuffle\n",
+        "\n",
+        "rps_training_data_shuffled = shuffle(rps_training_data, random_state=42)\n",
+        "rps_test_data_shuffled = shuffle(rps_test_data, random_state=42)"
+      ],
+      "metadata": {
+        "id": "faE_AA6c8GYs"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we perform feature scaling on the training and test data, as well as split the data into features and labels."
+      ],
+      "metadata": {
+        "id": "ZkBcB3K55pCY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "\n",
+        "feature_scaler = MinMaxScaler(feature_range=(0, 1)).set_output(transform=\"pandas\")\n",
+        "\n",
+        "rps_training_features = feature_scaler.fit_transform(rps_training_data_shuffled.drop(\"RPS Label\", axis=1))\n",
+        "rps_training_labels = rps_training_data_shuffled[[\"RPS Label\"]]\n",
+        "\n",
+        "rps_test_features = feature_scaler.transform(rps_test_data_shuffled.drop(\"RPS Label\", axis=1))\n",
+        "rps_test_labels = rps_test_data_shuffled[[\"RPS Label\"]]"
+      ],
+      "metadata": {
+        "id": "QMEY65pA5ory"
+      },
+      "execution_count": 53,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### Question 3\n",
         "Train a binary classifier to distinguish between just two classes, paper, and non-paper\n",
         "using `LogisticRegression`, `LinearSVC (C = 0.01)`, and `LinearSVC (C = 100)`. For each model:\n",
@@ -3549,10 +3600,98 @@
     {
       "cell_type": "code",
       "source": [
-        "# TODO code this..."
+        "# set up X_new\n",
+        "X_new_features = rps_training_features.iloc[[88, 2159, 1346],:]\n",
+        "X_new_labels = rps_training_labels.iloc[[88, 2159, 1346],:]"
       ],
       "metadata": {
-        "id": "UeLRBFAX4pTh"
+        "id": "wHQ5bIck76NV"
+      },
+      "execution_count": 55,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### `LogisticRegression`"
+      ],
+      "metadata": {
+        "id": "cnLOTJ_A5au0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Train the model."
+      ],
+      "metadata": {
+        "id": "UQ-PgpGCAwfh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "\n",
+        "log_reg = LogisticRegression(random_state=42)\n",
+        "log_reg.fit(rps_training_features, np.ravel(rps_training_labels))"
+      ],
+      "metadata": {
+        "id": "UeLRBFAX4pTh",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 222
+        },
+        "outputId": "1314f949-90cc-4b83-981d-901fe8fb3bf4"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/sklearn/linear_model/_logistic.py:458: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+            "\n",
+            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+            "Please also refer to the documentation for alternative solver options:\n",
+            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+            "  n_iter_i = _check_optimize_result(\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression(random_state=42)"
+            ],
+            "text/html": [
+              "<style>#sk-container-id-3 {color: black;background-color: white;}#sk-container-id-3 pre{padding: 0;}#sk-container-id-3 div.sk-toggleable {background-color: white;}#sk-container-id-3 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-3 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-3 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-3 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-3 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-3 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-3 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-3 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-3 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-3 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-3 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-3 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-3 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-3 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-3 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-3 div.sk-item {position: relative;z-index: 1;}#sk-container-id-3 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-3 div.sk-item::before, #sk-container-id-3 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-3 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-3 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-3 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-3 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-3 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-3 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-3 div.sk-label-container {text-align: center;}#sk-container-id-3 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-3 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-3\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>LogisticRegression(random_state=42)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-3\" type=\"checkbox\" checked><label for=\"sk-estimator-id-3\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">LogisticRegression</label><div class=\"sk-toggleable__content\"><pre>LogisticRegression(random_state=42)</pre></div></div></div></div></div>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Find the probability that the model used to predict the class of an instance (if applicable)."
+      ],
+      "metadata": {
+        "id": "WpzkiBnYCSg_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# TODO"
+      ],
+      "metadata": {
+        "id": "v5itn5LsCTWu"
       },
       "execution_count": null,
       "outputs": []
@@ -3560,7 +3699,132 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Table for question 3:\n",
+        "Predict labels for `X_new`."
+      ],
+      "metadata": {
+        "id": "VosA2vcIAyS_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "log_reg.predict(X_new_features)"
+      ],
+      "metadata": {
+        "id": "fzjjNku1_9r0",
+        "outputId": "9c813b27-a788-4cf1-ae7a-859f9c275300",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([3, 2, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 57
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Score the logistic regression model."
+      ],
+      "metadata": {
+        "id": "sq9XxOf9A2Z8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "log_reg.score(rps_test_features, rps_test_labels)"
+      ],
+      "metadata": {
+        "id": "OH4PB-ZCAfe_",
+        "outputId": "61e733eb-b04c-4f07-83e9-f6d72198e2ed",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.6263440860215054"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Get values of the `decision_function` for `X_new`."
+      ],
+      "metadata": {
+        "id": "fz1AIuUHBGU9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "log_reg.decision_function(X_new_features)"
+      ],
+      "metadata": {
+        "id": "Pu3CrVYZBJCD",
+        "outputId": "c66dd4d0-c568-42f1-b688-f7d821a759de",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-7.71530141, -7.96697771, 15.68227912],\n",
+              "       [-3.15621806,  6.85277665, -3.69655859],\n",
+              "       [-0.49520806,  6.77223066, -6.2770226 ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### `LinearSVC (C = 0.01)`"
+      ],
+      "metadata": {
+        "id": "1UINQ9fo5dFS"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### `LinearSVC (C = 100)`"
+      ],
+      "metadata": {
+        "id": "phTxmwK25hiz"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### Table for question 3:\n",
         "\n",
         "| Model/Technique | Predict `X_new` | Probability | `decision_function` | Score\n",
         "| --- | --- | --- | --- | --- |\n",
