Start SVD for part 1

--- a/assignment4/assignment4.ipynb
+++ b/assignment4/assignment4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOUCggzN+x3WD09M8MqR4zL",
+      "authorship_tag": "ABX9TyNlOM8pIqgZ1m8lDVutQpX3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1348,7 +1348,7 @@
       "cell_type": "code",
       "source": [
         "# set up the X_new variable with column names for each feature\n",
-        "X_new = [324, 112, 3, 2, 4.5, 8,1]\n",
+        "X_new = [324, 112, 3, 2, 4.5, 8, 1]\n",
         "X_new = pd.DataFrame([X_new], columns=list(adm_training_features))\n",
         "X_new = feature_scaler.transform(X_new)\n",
         "X_new"
@@ -1775,12 +1775,30 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "X_new_with_dummy = add_dummy_feature(X_new)\n",
+        "label_scaler.inverse_transform(X_new_with_dummy @ theta_best_svd)"
+      ],
       "metadata": {
-        "id": "6dQPs6i4OiNX"
+        "id": "6dQPs6i4OiNX",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c2b28003-08fe-4a4e-877a-f049cb50b8ca"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.71212346]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 44
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1793,7 +1811,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# TODO"
+      ],
       "metadata": {
         "id": "IjJCsvOYOiNZ"
       },
@@ -1811,7 +1831,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# TODO"
+      ],
       "metadata": {
         "id": "0qU-eaK9OiNZ"
       },
@@ -2160,7 +2182,7 @@
         "| Model/Technique | Thetas $\\Theta$'s | Predict `X_new` | Score | `mean_squared_error` |\n",
         "| --- | --- | --- | --- | --- |\n",
         "| Linear regression using Scikit-Learn | $\\theta_0, \\theta_1, \\dots, \\theta_7 = \\{0.031, 0.150, 0.122, 0.041 , 0.004, 0.109, 0.564, 0.037\\}$ | 0.71 | 0.81 | 0.0136 |\n",
-        "| Singular Value Decomposition (SVD) |\n",
+        "| Singular Value Decomposition (SVD) | $\\theta_0, \\theta_1, \\dots, \\theta_7 = 0.031, 0.150, 0.122, 0.041, 0.004, 0.109, 0.564, 0.037$\n",
         "| Stochastic Gradient Descent | $\\theta_0, \\theta_1, \\dots, \\theta_7 = \\{0.078, 0.205, 0.178, 0.090, 0.062, 0.117, 0.265 , 0.040\\}$ | 0.74 | 0.78 | 0.0156\n",
         "| Polynomial Regression with degree 2 | $\\theta_0, \\theta_1, \\dots = \\theta_{35} = \\{0.029, 0.217,  0.249, -0.162,  0.057,  0.144,  0.599, -0.035,  0.02, -0.229,  0.141,  0.052,  0.239, -0.445,  0.008,  0.131, -0.048, 0.355, -0.207, -0.422,  0.077, -0.148,  0.605, -0.014, -0.025, -0.031, -0.547, -0.091,  0.295, -0.066,  0.341, -0.715, -0.008, 0.508,  0.209, -0.035\\}$ | 0.73 | 0.811 | 0.0135 |"
       ],
