Answer part 2 question 4

--- a/assignment4/assignment4.ipynb
+++ b/assignment4/assignment4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNOP2tWq572Cc8MANkLr/s+",
+      "authorship_tag": "ABX9TyOFvh7pqHVdTG8TcPBU5AWD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3870,12 +3870,12 @@
         "linear_svc_low_regularization.fit(rps_training_features, np.ravel(rps_training_labels))"
       ],
       "metadata": {
-        "id": "Y3eYP_7mbspY",
-        "outputId": "08e6f9c9-f2af-4254-b0ef-0b7d5a92fd1f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 75
-        }
+        },
+        "id": "Y3eYP_7mbspY",
+        "outputId": "08e6f9c9-f2af-4254-b0ef-0b7d5a92fd1f"
       },
       "execution_count": 37,
       "outputs": [
@@ -3893,15 +3893,6 @@
           "execution_count": 37
         }
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Find the probability that the model used to predict the class of an instance."
-      ],
-      "metadata": {
-        "id": "7FFKrGA_dYyw"
-      }
     },
     {
       "cell_type": "markdown",
@@ -4038,12 +4029,12 @@
         "linear_svc_high_regularization.fit(rps_training_features, np.ravel(rps_training_labels))"
       ],
       "metadata": {
-        "id": "a8VKwuQydOfd",
-        "outputId": "cb521e0c-6c35-4c50-c1f8-ee4993b5db9c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 111
-        }
+        },
+        "id": "a8VKwuQydOfd",
+        "outputId": "cb521e0c-6c35-4c50-c1f8-ee4993b5db9c"
       },
       "execution_count": 47,
       "outputs": [
@@ -4073,15 +4064,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Find the probability that the model used to predict the class of an instance."
-      ],
-      "metadata": {
-        "id": "uf6Racbnd4jb"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "Predict labels for `X_new`."
       ],
       "metadata": {
@@ -4094,11 +4076,11 @@
         "linear_svc_high_regularization.predict(X_new_features)"
       ],
       "metadata": {
-        "id": "UQM5XUI1d4jc",
-        "outputId": "cd905119-0d79-4d04-f44c-86048d40dfee",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UQM5XUI1d4jc",
+        "outputId": "cd905119-0d79-4d04-f44c-86048d40dfee"
       },
       "execution_count": 42,
       "outputs": [
@@ -4129,11 +4111,11 @@
         "linear_svc_high_regularization.score(rps_test_features, rps_test_labels)"
       ],
       "metadata": {
-        "id": "Ksimjutwd4jc",
-        "outputId": "6b0eaa87-c971-46bf-810e-65c42ffcc93f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "Ksimjutwd4jc",
+        "outputId": "6b0eaa87-c971-46bf-810e-65c42ffcc93f"
       },
       "execution_count": 48,
       "outputs": [
@@ -4164,11 +4146,11 @@
         "linear_svc_high_regularization.decision_function(X_new_features)"
       ],
       "metadata": {
-        "id": "jahYyDf5d4jc",
-        "outputId": "8f834709-b18f-4276-b4bf-09a277d774f3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jahYyDf5d4jc",
+        "outputId": "8f834709-b18f-4276-b4bf-09a277d774f3"
       },
       "execution_count": 44,
       "outputs": [
@@ -4207,7 +4189,12 @@
         "### Question 4\n",
         "How can you predict the class of an instance using:\n",
         "1. Probability (if applicable)\n",
-        "2. `decision_function`"
+        "> When using probability to predict the class of an instance, the model gives a probability for each class.\n",
+        "  This tells us the likelihood that the given instance is a member of the a class.\n",
+        "\n",
+        "2. `decision_function`\n",
+        "> When using the `decision_function`, the model gives a score to each category.\n",
+        "  The model then predicts the class of the instance by selecting the category with the highest score."
       ],
       "metadata": {
         "id": "LLzRcFBo4rI1"
